--- a/src/package.xml
+++ b/src/package.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-	<types>
-		<members>PublicMetrics</members>
-		<members>PublicMetricsAPI</members>
-		<members>PublicMetricsController</members>
-		<members>PublicMetricsDoDML</members>
-		<members>PublicMetrics_Schedulable</members>
-		<members>PublicMetrics_Schedulable_TEST</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>PublicMetrics</members>
-		<members>PublicMetricsDashboard</members>
-		<name>ApexPage</name>
-	</types>
-	<types>
-		<members>Metric_Result__c</members>
-		<members>Public_Metrics__mdt</members>
-		<name>CustomObject</name>
-	</types>
-	<version>35.0</version>
+    <types>
+        <members>*</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>Metric_Result__c</members>
+        <members>Public_Metrics__mdt</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Public_Metrics</members>
+        <name>CustomTab</name>
+    </types>
+    <version>35.0</version>
 </Package>
