--- a/src/package.xml
+++ b/src/package.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>PublicMetrics</members>
+        <members>PublicMetrics_Schedulable</members>
+        <members>PublicMetrics_Schedulable_TEST</members>
+        <members>PublicMetricsAPI</members>
+        <members>PublicMetricsController</members>
+        <members>PublicMetricsDoDML</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>*</members>
+        <members>PublicMetrics</members>
+        <members>PublicMetricsDashboard</members>
         <name>ApexPage</name>
     </types>
     <types>
@@ -16,6 +22,11 @@
     <types>
         <members>Public_Metrics</members>
         <name>CustomTab</name>
+    </types>
+    <types>
+        <members>admin</members>
+        <members>bootstrao</members>
+        <name>StaticResource</name>
     </types>
     <version>35.0</version>
 </Package>
