--- a/unpackaged/post/mdts/package.xml
+++ b/unpackaged/post/mdts/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>Public_Metrics.Public_Metric_Group_Hikes_This_Month</members>
+        <members>Public_Metrics.Group_Hikers</members>
         <name>CustomMetadata</name>
     </types>
     <types>
