add report selector page

--- a/src/package.xml
+++ b/src/package.xml
@@ -11,12 +11,14 @@
 		<members>PublicMetrics_Calculate_Action</members>
 		<members>PublicMetrics_Component_CTRL</members>
 		<members>SETUP_Assistant_CTRL</members>
+		<members>SETUP_SelectReport_CTRL</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
 		<members>PublicMetrics</members>
 		<members>PublicMetricsDashboard</members>
 		<members>MetricSetupAssistant</members>
+		<members>MetricSetupReportSelect</members>
 		<name>ApexPage</name>
 	</types>
 	<types>
