using @awfawcett's metadata api service for now, until we have a better plan

--- a/src/package.xml
+++ b/src/package.xml
@@ -12,6 +12,10 @@
 		<members>PublicMetrics_Component_CTRL</members>
 		<members>SETUP_Assistant_CTRL</members>
 		<members>SETUP_SelectReport_CTRL</members>
+		<members>MetadataService</members>
+		<members>MetadataServiceTest</members>
+		<members>CustomMetadataService</members>
+		<members>CustomMetadataServiceTest</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
